Bug 1211861 - Let the info text wrap in Dock option. r=aleth

--- a/mail/themes/osx/mail/preferences/preferences.css
+++ b/mail/themes/osx/mail/preferences/preferences.css
@@ -171,6 +171,10 @@ tabpanels {
   margin: 0 6px 6px;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 /* override the color style for tag items when they
    have selection */
 #tagList listitem[selected="true"] {
